Update README.md
Provide a default gradle.properties file that worked for me.